---
source: crates/builder/src/typechecker/mod.rs
expression: build(src).unwrap()
---
types:
  values:
    - - ~
      - Primitive: Boolean
    - - ~
      - Primitive: Int
    - - ~
      - Primitive: Float
    - - ~
      - Primitive: Decimal
    - - ~
      - Primitive: String
    - - ~
      - Primitive: LocalTime
    - - ~
      - Primitive: LocalDateTime
    - - ~
      - Primitive: LocalDate
    - - ~
      - Primitive: Instant
    - - ~
      - Primitive: Json
    - - ~
      - Primitive: Blob
    - - ~
      - Primitive: Uuid
    - - ~
      - Primitive: Exograph
    - - ~
      - Primitive: ExographPriv
    - - ~
      - Primitive:
          Interception: Operation
    - - ~
      - Composite:
          name: User
          kind: Type
          fields:
            - name: doc
              typ:
                Plain:
                  - Doc
                  - []
                  - true
              annotations:
                annotations:
                  access:
                    name: access
                    params:
                      Single:
                        - LogicalOp:
                            Or:
                              - LogicalOp:
                                  Or:
                                    - RelationalOp:
                                        Eq:
                                          - FieldSelection:
                                              Select:
                                                - Single:
                                                    - - self
                                                    - Reference:
                                                        index: 15
                                                        generation: ~
                                                - - role
                                                - Reference:
                                                    index: 4
                                                    generation: ~
                                          - StringLiteral:
                                              - role_admin
                                          - Primitive: Boolean
                                    - RelationalOp:
                                        Eq:
                                          - FieldSelection:
                                              Select:
                                                - Single:
                                                    - - self
                                                    - Reference:
                                                        index: 15
                                                        generation: ~
                                                - - role
                                                - Reference:
                                                    index: 4
                                                    generation: ~
                                          - StringLiteral:
                                              - role_superuser
                                          - Primitive: Boolean
                                    - Primitive: Boolean
                              - FieldSelection:
                                  Select:
                                    - Select:
                                        - Single:
                                            - - self
                                            - Reference:
                                                index: 15
                                                generation: ~
                                        - - doc
                                        - Reference:
                                            index: 16
                                            generation: ~
                                    - - is_public
                                    - Reference:
                                        index: 0
                                        generation: ~
                              - Primitive: Boolean
                  column:
                    name: column
                    params:
                      Single:
                        - StringLiteral:
                            - custom_column
              default_value: ~
            - name: role
              typ:
                Plain:
                  - String
                  - []
                  - true
              annotations:
                annotations: {}
              default_value: ~
          annotations:
            annotations: {}
    - - ~
      - Composite:
          name: Doc
          kind: Type
          fields:
            - name: is_public
              typ:
                Plain:
                  - Boolean
                  - []
                  - true
              annotations:
                annotations: {}
              default_value: ~
          annotations:
            annotations: {}
    - ~
    - ~
    - ~
    - ~
    - ~
    - ~
    - ~
    - ~
    - ~
    - ~
    - ~
    - ~
    - ~
    - ~
    - ~
  map:
    Blob:
      index: 10
      generation: ~
    Boolean:
      index: 0
      generation: ~
    Exograph:
      index: 12
      generation: ~
    ExographPriv:
      index: 13
      generation: ~
    Decimal:
      index: 3
      generation: ~
    Doc:
      index: 16
      generation: ~
    Float:
      index: 2
      generation: ~
    Instant:
      index: 8
      generation: ~
    Int:
      index: 1
      generation: ~
    Json:
      index: 9
      generation: ~
    LocalDate:
      index: 7
      generation: ~
    LocalDateTime:
      index: 6
      generation: ~
    LocalTime:
      index: 5
      generation: ~
    Operation:
      index: 14
      generation: ~
    String:
      index: 4
      generation: ~
    User:
      index: 15
      generation: ~
    Uuid:
      index: 11
      generation: ~
services:
  values:
    - - ~
      - name: UserService
        annotations:
          annotations:
            postgres:
              name: postgres
              params: None
        types:
          - name: User
            kind: Type
            fields:
              - name: doc
                typ:
                  Plain:
                    - Doc
                    - []
                    - true
                annotations:
                  annotations:
                    access:
                      name: access
                      params:
                        Single:
                          - LogicalOp:
                              Or:
                                - LogicalOp:
                                    Or:
                                      - RelationalOp:
                                          Eq:
                                            - FieldSelection:
                                                Select:
                                                  - Single:
                                                      - - self
                                                      - Reference:
                                                          index: 15
                                                          generation: ~
                                                  - - role
                                                  - Reference:
                                                      index: 4
                                                      generation: ~
                                            - StringLiteral:
                                                - role_admin
                                            - Primitive: Boolean
                                      - RelationalOp:
                                          Eq:
                                            - FieldSelection:
                                                Select:
                                                  - Single:
                                                      - - self
                                                      - Reference:
                                                          index: 15
                                                          generation: ~
                                                  - - role
                                                  - Reference:
                                                      index: 4
                                                      generation: ~
                                            - StringLiteral:
                                                - role_superuser
                                            - Primitive: Boolean
                                      - Primitive: Boolean
                                - FieldSelection:
                                    Select:
                                      - Select:
                                          - Single:
                                              - - self
                                              - Reference:
                                                  index: 15
                                                  generation: ~
                                          - - doc
                                          - Reference:
                                              index: 16
                                              generation: ~
                                      - - is_public
                                      - Reference:
                                          index: 0
                                          generation: ~
                                - Primitive: Boolean
                    column:
                      name: column
                      params:
                        Single:
                          - StringLiteral:
                              - custom_column
                default_value: ~
              - name: role
                typ:
                  Plain:
                    - String
                    - []
                    - true
                annotations:
                  annotations: {}
                default_value: ~
            annotations:
              annotations: {}
          - name: Doc
            kind: Type
            fields:
              - name: is_public
                typ:
                  Plain:
                    - Boolean
                    - []
                    - true
                annotations:
                  annotations: {}
                default_value: ~
            annotations:
              annotations: {}
        methods: []
        interceptors: []
        base_exofile: input.exo
    - ~
    - ~
    - ~
  map:
    UserService:
      index: 0
      generation: ~

